# Swarmathon-SIPI-Public

launch/: apriltags.launch  localization.launch  swarmie.launch
misc/: rover_onboard_node_launch.sh  rover_onboard_node_launch_unm.sh
src/abridge/src/: abridge.cpp
src/behaviours/src/: SearchController.cpp  SearchController.h
src/sipi_controller/: CMakeLists.txt  package.xml
src/sipi_controller/include/sipi_controller/: AvoidHome.h  DrivingController.h  DropOffController.h  FindHomeController.h  Localization.h  ObstacleController.h  PickUpController.h  SearchController.h  SearchController_JW.h  sipi_controller.h  targetFunctions.h  usbSerial.h
src/sipi_controller/launch/: apriltags.launch  localization.launch  localization_gps.launch  localization_no_gps.launch  localization_odom.launch  navsat.launch  swarmie.launch  swarmie_real.launch
src/sipi_controller/scripts/: rover_onboard_node_launch.sh
src/sipi_controller/src/: AvoidHome.cpp  DrivingController.cpp  DropOffController.cpp  FindHomeController.cpp  GripperController.cpp  GripperController.h  Localization.cpp  Localization.h  ObstacleController.cpp  ObstacleController.h  PickUpController.cpp  SearchController.cpp  SearchController_CHAPPIE.cpp  SearchController_EVA.cpp  SearchController_EVA.h  SearchController_JW.cpp  SearchController_WALLE.cpp  SearchController_WALLE.h  VisualLocalization.cpp  VisualLocalization.h  abridge.cpp  mobility.cpp  repeat_localization.cpp  sipi_controller.cpp  sipi_controller_node.cpp  targetFunctions.cpp  usbSerial.cpp  visual_localization_node.cpp
